Refactor code structure and remove redundant sections for improved readability and maintainability