@@ -8,7 +8,6 @@ import com.shopjoy.exception.InsufficientStockException;
 import com.shopjoy.exception.ResourceNotFoundException;
 import com.shopjoy.exception.ValidationException;
 import com.shopjoy.repository.InventoryRepository;
-import com.shopjoy.repository.ProductRepository;
 import com.shopjoy.service.InventoryService;
 import lombok.AllArgsConstructor;
 
@@ -18,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -31,7 +29,6 @@ import java.util.stream.Collectors;
 public class InventoryServiceImpl implements InventoryService {
 
     private final InventoryRepository inventoryRepository;
-    private final ProductRepository productRepository;
     private final InventoryMapperStruct inventoryMapper;
 
     @Override
@@ -54,34 +51,28 @@ public class InventoryServiceImpl implements InventoryService {
 
         Inventory createdInventory = inventoryRepository.save(inventory);
 
-        return convertToResponse(createdInventory);
+        return inventoryMapper.toInventoryResponse(createdInventory);
     }
 
     @Override
     public InventoryResponse getInventoryByProduct(Integer productId) {
         Inventory inventory = inventoryRepository.findByProductId(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Inventory", "productId", productId));
-        return convertToResponse(inventory);
+        return inventoryMapper.toInventoryResponse(inventory);
     }
 
     @Override
     public boolean isProductInStock(Integer productId) {
-        try {
-            Optional<Inventory> inventory = inventoryRepository.findByProductId(productId);
-            return inventory.isPresent() && inventory.get().getQuantityInStock() > 0;
-        } catch (ResourceNotFoundException e) {
-            return false;
-        }
+        return inventoryRepository.findByProductId(productId)
+                .map(inventory -> inventory.getQuantityInStock() > 0)
+                .orElse(false);
     }
 
     @Override
     public boolean hasAvailableStock(Integer productId, int quantity) {
-        try {
-            Optional<Inventory> inventory = inventoryRepository.findByProductId(productId);
-            return inventory.isPresent() && inventory.get().getQuantityInStock() >= quantity;
-        } catch (ResourceNotFoundException e) {
-            return false;
-        }
+        return inventoryRepository.findByProductId(productId)
+                .map(inventory -> inventory.getQuantityInStock() >= quantity)
+                .orElse(false);
     }
 
     @Override
@@ -98,7 +89,7 @@ public class InventoryServiceImpl implements InventoryService {
         inventory.setUpdatedAt(LocalDateTime.now());
         
         Inventory savedInventory = inventoryRepository.save(inventory);
-        return convertToResponse(savedInventory);
+        return inventoryMapper.toInventoryResponse(savedInventory);
     }
 
     @Override
@@ -116,7 +107,7 @@ public class InventoryServiceImpl implements InventoryService {
         inventory.setUpdatedAt(LocalDateTime.now());
 
         Inventory savedInventory = inventoryRepository.save(inventory);
-        return convertToResponse(savedInventory);
+        return inventoryMapper.toInventoryResponse(savedInventory);
     }
 
     @Override
@@ -140,7 +131,7 @@ public class InventoryServiceImpl implements InventoryService {
         inventory.setUpdatedAt(LocalDateTime.now());
 
         Inventory savedInventory = inventoryRepository.save(inventory);
-        return convertToResponse(savedInventory);
+        return inventoryMapper.toInventoryResponse(savedInventory);
     }
 
     /**
@@ -189,15 +180,17 @@ public class InventoryServiceImpl implements InventoryService {
 
     @Override
     public List<InventoryResponse> getLowStockProducts() {
-        return convertToResponses(inventoryRepository.findLowStock());
+        return inventoryRepository.findLowStock().stream()
+                .map(inventoryMapper::toInventoryResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<InventoryResponse> getOutOfStockProducts() {
-        List<Inventory> outOfStock = inventoryRepository.findAll().stream()
+        return inventoryRepository.findAll().stream()
                 .filter(inventory -> inventory.getQuantityInStock() == 0)
-                .toList();
-        return convertToResponses(outOfStock);
+                .map(inventoryMapper::toInventoryResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -214,7 +207,7 @@ public class InventoryServiceImpl implements InventoryService {
 
         Inventory updatedInventory = inventoryRepository.save(inventory);
 
-        return convertToResponse(updatedInventory);
+        return inventoryMapper.toInventoryResponse(updatedInventory);
     }
 
     @Override
@@ -222,8 +215,9 @@ public class InventoryServiceImpl implements InventoryService {
         if (productIds == null || productIds.isEmpty()) {
             return List.of();
         }
-        List<Inventory> inventories = inventoryRepository.findByProductIdIn(productIds);
-        return convertToResponses(inventories);
+        return inventoryRepository.findByProductIdIn(productIds).stream()
+                .map(inventoryMapper::toInventoryResponse)
+                .collect(Collectors.toList());
     }
 
     private void validateInventoryData(Inventory inventory) {
@@ -242,42 +236,5 @@ public class InventoryServiceImpl implements InventoryService {
         if (inventory.getReorderLevel() < 0) {
             throw new ValidationException("reorderLevel", "cannot be negative");
         }
-    }
-
-    private InventoryResponse convertToResponse(Inventory inventory) {
-        String productName = "Unknown Product";
-        try {
-            productName = productRepository.findById(inventory.getProductId())
-                    .map(p -> p.getProductName())
-                    .orElse("Unknown Product");
-        } catch (Exception e) {
-            // Ignore product fetch errors
-        }
-        return inventoryMapper.toInventoryResponse(inventory, productName);
-    }
-
-    /**
-     * Batch converts inventories to responses, fetching products in bulk.
-     */
-    private List<InventoryResponse> convertToResponses(List<Inventory> inventories) {
-        if (inventories.isEmpty()) {
-            return List.of();
-        }
-        
-        // Fetch all products in one query
-        List<Integer> productIds = inventories.stream()
-                .map(Inventory::getProductId)
-                .distinct()
-                .collect(Collectors.toList());
-        Map<Integer, String> productNameMap = productRepository.findAllById(productIds).stream()
-                .collect(Collectors.toMap(
-                        com.shopjoy.entity.Product::getProductId,
-                        com.shopjoy.entity.Product::getProductName));
-        
-        return inventories.stream()
-                .map(inventory -> inventoryMapper.toInventoryResponse(
-                        inventory,
-                        productNameMap.getOrDefault(inventory.getProductId(), "Unknown Product")))
-                .collect(Collectors.toList());
     }
 }
